tests/diagnostics/catalog/snapshots/ir/IR0011.snap
error[IR0011]: IR_E_CONST_REQUIRED
 --> tests/diagnostics/catalog/sources/ir/IR0011.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0011
  = help: keep IR validation diagnostics structured and catalog-backed
